feat: improve AI capability